--- a/example/package.json
+++ b/example/package.json
@@ -2,10 +2,19 @@
   "name": "example",
   "private": true,
   "scripts": {
-    "start": "node .",
+    "test": "ava",
     "refresh": "yarn cache clean && yarn install --force --no-lockfile"
+  },
+  "ava": {
+    "extensions": [
+      "ts"
+    ]
   },
   "dependencies": {
     "state-prism": "file:../state-prism.tgz"
+  },
+  "devDependencies": {
+    "@ava/typescript": "1.1.1",
+    "ava": "3.8.2"
   }
 }
