Update xo config

--- a/package.json
+++ b/package.json
@@ -30,16 +30,7 @@
     "bracketSpacing": true
   },
   "xo": {
-    "prettier": true,
-    "env": [
-      "es2020",
-      "node"
-    ],
-    "rules": {
-      "unicorn/filename-case": "off",
-      "capitalized-comments": "off",
-      "dot-notation": "off"
-    }
+    "prettier": true
   },
   "husky": {
     "hooks": {
