--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "state-prism",
   "license": "MIT",
   "version": "0.0.5",
-  "description": "",
-  "keywords": [],
+  "description": "Subscribe to state changes",
+  "keywords": [
+    "state-management"
+  ],
   "scripts": {
     "build": "rm -rf dist && rollup --config rollup.config.js",
     "release": "yarn clean && yarn audit && yarn build && np",
