--- a/example/package.json
+++ b/example/package.json
@@ -2,12 +2,12 @@
   "name": "example",
   "private": true,
   "scripts": {
-    "test": "ava && node performance.js",
+    "test": "ava && ts-node performance.ts",
     "refresh": "yarn cache clean state-prism && rm -rf $(yarn cache dir)/.tmp && yarn add file:../state-prism.tgz"
   },
   "ava": {
     "require": [
-      "./setup-tests.js"
+      "ts-node/register"
     ],
     "extensions": [
       "ts"
@@ -17,10 +17,8 @@
     "state-prism": "file:../state-prism.tgz"
   },
   "devDependencies": {
-    "@babel/core": "7.14.0",
-    "@babel/preset-env": "7.14.1",
-    "@babel/preset-typescript": "7.13.0",
-    "@babel/register": "7.13.16",
-    "ava": "3.15.0"
+    "ava": "3.15.0",
+    "ts-node": "9.1.1",
+    "typescript": "4.2.4"
   }
 }
